# cc2640_dev

./: Cargo.toml  memory.x  openocd.cfg
src/: config.rs  main.rs
src/drivers/: button.rs  led.rs  mod.rs
src/mcu/: gpio.rs  mod.rs
